--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -3,8 +3,8 @@ on:
   # trigger/start job when push happens to any of specified branches
   push:
     branches:
-    # - feature/**
-    # - main
+    - feature/**
+    - main
     # - staging
 # required permissions by GitHub Actions for assuming AWS IAM role
 permissions:
@@ -52,14 +52,6 @@ jobs:
           AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
           terraform init -backend-config="bucket=${AWS_ACCOUNT_ID}-state-bucket-${ENVIRONMENT_STAGE}" -backend-config="key=${ENVIRONMENT_STAGE}.tfstate"
 
-      # Checks that all Terraform configuration files adhere to a canonical format
-      - name: Terraform Format
-        run: terraform fmt -check
-
-      # Generates an execution plan for Terraform
-      - name: Terraform Plan
-        run: terraform plan -input=false -var-file=${ENVIRONMENT_STAGE}.tfvars 
-
-      # Build infrastructure according to Terraform configuration files
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false -var-file=${ENVIRONMENT_STAGE}.tfvars 
+      # Destroy infrastructure according to Terraform configuration files
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve -input=false -var-file=${ENVIRONMENT_STAGE}.tfvars 
