--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -3,9 +3,9 @@ on:
   # trigger/start job when push happens to any of specified branches
   push:
     branches:
-    # - feature/**
-    # - main
-    # - staging
+    - feature/**
+    - main
+    - staging
 # required permissions by GitHub Actions for assuming AWS IAM role
 permissions:
   id-token: write # This is required for requesting the JWT
